decafcomp/llvm/test/err-return-void.llvm.bc.err
/usr/lib/llvm-8/bin/llvm-as: llvm/test/err-return-void.llvm:15:6: error: void type only allowed for function results
  br void <badref>, label %ifTrue, label %ifEnd
     ^
